--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Groundcrew",
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "@studio-freight/react-lenis": "^0.0.47",
     "gatsby": "^5.13.3",
     "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
